# vibe-coded

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
cue/: LICENSE.cue
src/: code.rs  lib.rs  main.rs  messages.rs  readme.rs  repo.rs  rule_formatter.rs  rules.rs  staging_dir.rs  traits.rs
src/rules/: failed_result.rs  macros.rs  messages.rs  readme.rs  repository.rs  repository_age.rs  repository_dev_time.rs
