[package]
name = "vibe-coded"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
arboard = "3.6.1"
cached = "0.56.0"
colored = "3.1.1"
git2 = {version = "0.20.4", features = ["vendored-openssl"] }
inventory = "0.3.21"
once_cell = "1.21.3"
pico-args = "0.5.0"
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
regex = "1.12.3"
unicode-segmentation = "1.12.0"
